--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,26 @@
 .kubus-container {
   background-color: black;
 }
+
+.slidecontainer {
+  margin: 20px;
+  width: 30%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.home-container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+}
