--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,8 @@
 
 .kubus-container {
   background-color: black;
-  -webkit-perspective: 1600px;
-  -webkit-perspective-origin: 50% -240px;
+  width: 100%;
+  height: 100%;
 }
 
 .kubus {
@@ -35,19 +35,21 @@
 }
 
 .slidecontainer {
-  margin: 20px;
   width: 30%;
+  position: absolute;
+  color: white;
+  bottom: 50%;
 }
 
 .slider {
-  -webkit-appearance: none;
+  /* -webkit-appearance: none;
   width: 100%;
   height: 25px;
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
   -webkit-transition: 0.2s;
-  transition: opacity 0.2s;
+  transition: opacity 0.2s; */
 }
 
 .home-container {
@@ -55,4 +57,10 @@
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
+  overflow: hidden;
+  position: relative;
+}
+
+.super-crazy-colors {
+  background-color: white;
 }
