--- a/src/App.css
+++ b/src/App.css
@@ -30,26 +30,10 @@
 
 .kubus {
   position: relative;
-  width: 200px;
-  transform-style: preserve-3d;
 }
 
 .slidecontainer {
-  width: 30%;
-  position: absolute;
   color: white;
-  bottom: 50%;
-}
-
-.slider {
-  /* -webkit-appearance: none;
-  width: 100%;
-  height: 25px;
-  background: #d3d3d3;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: 0.2s;
-  transition: opacity 0.2s; */
 }
 
 .home-container {
@@ -63,4 +47,44 @@
 
 .super-crazy-colors {
   background-color: white;
+}
+
+.arrows {
+  position: relative;
+  width: 80px;
+  margin-top: 30px;
+  margin-left: 20px;
+}
+
+.arrow-left {
+  position: absolute;
+  left: -5px;
+  top: 0;
+}
+
+.arrow-up {
+  position: absolute;
+  bottom: -15px;
+  left: 20px;
+}
+
+.arrow-down {
+  position: absolute;
+  top: 30px;
+  left: 20px;
+}
+
+.arrow-right {
+  position: absolute;
+  right: -5px;
+}
+
+.controls-container {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  bottom: 50%;
+  margin-left: 1%;
 }
